# ai-agent-evals

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  NOTICE.txt  README.md  action.py  action.yml  build-ado-extension-dev.ps1  evaluation.md  init-ado-extension.ps1  overview.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vss-extension.json
.azure-devops/: cg.yaml  common-steps.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.gdn/: .gdnbaselines
.github/linters/: .checkov.yml  .isort.cfg  .jscpd.json
.github/workflows/: ado-extension-pack.yaml  ado-extension-publish-dev.yaml  ado-extension-publish-prod.yaml  ci.yaml  lint.yaml  test.yaml  test_action.yaml
analysis/: __init__.py  analysis.py  constants.py  custom_eval.py  evaluator-scores.yaml  processing.py  render.py  summary.py
samples/: ado-multiple-agents.yml  all-parameters.yml  multiple-agents.yml  single-agent.yml
samples/data/: dataset-builtin-evaluators.json  dataset-classic.json  dataset-custom-evaluators.json  dataset-data-mapping.json  dataset-openai-graders.json  dataset-small.json  dataset-tiny.json  dataset.json  eval-input_asst_7ZijCsebAPQ7ggOkqJE1uH4G.jsonl  eval-input_asst_q1l6UXTwGOa9smSOjRGROCEg.jsonl  eval-output_asst_7ZijCsebAPQ7ggOkqJE1uH4G.json  eval-output_asst_q1l6UXTwGOa9smSOjRGROCEg.json
samples/workflows/: ado-multiple-agents.yml  multiple-agents.yml  single-agent.yml
scripts/: download-previousVersions.ps1  download-vstsTaskSdk.ps1  set-variables.ps1  setup-dev.ps1  setup.ps1  utilities.ps1
tasks/AIAgentEvaluation/: .gitignore  build-dist.ps1  build.ps1  check-python.ps1  run.ps1  task.json
tasks/AIAgentEvaluation/V1/: index.ts  package-lock.json  package.json  run.ps1  task.json
tasks/AIAgentEvaluation/V1/analysis/: render.py
tasks/AIAgentEvaluation/V2/: index.ts  package-lock.json  package.json  run.ps1  task.json
tasks/AIAgentEvaluation/V3/: index.ts  package-lock.json  package.json  task.json  tsconfig.json
tasks/AIAgentEvaluation/ps_modules/VstsTaskSdk/: PSGetModuleInfo.xml
tasks/AIAgentReport/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tasks/AIAgentReport/src/: artifact-client.tsx  error.tsx  github-flavored-markdown.tsx  main.tsx
tests/: conftest.py  test_action_helpers.py  test_analysis.py  test_processing.py  test_render.py  test_retry_logic.py  test_summary.py  test_validation.py
tests/data/: golden-dataset-small.json  golden-dataset.json
tests/snapshots/summarize/: one_variant.md  two_variants.md
